datepicker not showing in mobile screen fixed

--- a/static/sknf/css/style.css
+++ b/static/sknf/css/style.css
@@ -230,3 +230,7 @@ input[name=topic] {
 .logo{
     visibility: visible !important;
 }
+
+.bootstrap-datetimepicker-widget.dropdown-menu.bottom.pull-right {
+    right: 6px !important;
+}
